--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Author Name</title>
 <link rel="stylesheet" href="main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="jquery.waypoints.min.js"></script>
 <script src="jquery.scrollTo.min.js"></script>
