--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <title>Author Name</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" media="(min-width: 620px)" href="620px.css">
 <link rel="stylesheet" media="(min-width: 1000px)" href="1000px.css">
+
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="jquery.waypoints.min.js"></script>
